# gridwars.run

./: .gitignore  .gitmodules  .rafter.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.beads/telemetry/: dispatch-events.jsonl  events.jsonl  invocations.jsonl
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: cf-pages-deploy.yml  dependency-review.yml  fallow.yml  fly-deploy.yml  osv-scanner.yml  pr-agent.yml  rafter-security.yml  release.yml  scorecard.yml  semgrep.yml  test.yml  zizmor.yml
docs/: CONVENTIONS.md  HOSTING.md  PLAYER.md  SETUP.md  ZONES.md
docs/design/: evennia-deploy-architecture.md
docs/operations/: world-content-runbook.md
docs/research/: evennia-hosting-options.md
gridwars/: .dockerignore  Dockerfile  fly.toml
gridwars/commands/: admin_daemon.py  admin_discs.py  capture.py  combat.py  default_cmdsets.py  duels.py  equipment.py  factions.py  leaderboard.py  queue.py  scan.py  status.py
gridwars/tests/: test_daemon_variants.py  test_disc_xp.py  test_first_login.py  test_gameplay_loop.py  test_onboarding.py  test_prose_pools.py  test_repop_ticker.py  test_room_combat_flag.py
gridwars/typeclasses/: accounts.py  characters.py  daemon_variants.py  daemons.py  discs.py  duel_arenas.py  exits.py  rooms.py  scripts.py  welcome_program.py
gridwars/world/: batch_cmds.ev  build_grid.py  combat.py  daemon_spawn.py  duels.py  duels_score.py  rating.py  (+7 more)
landing/: _headers  _redirects  index.html
(+46 files in other folders)
