# SPDX-License-Identifier: AGPL-3.0-or-later

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gridwars"
version = "0.1.0"
description = "GridWars.run — open-source text-based PvP world built on Evennia"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Jay German" }]
keywords = ["mud", "text-game", "evennia", "pvp", "multiplayer"]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)",
]
dependencies = [
  "evennia @ file://./vendor/evennia",
]

[project.urls]
Homepage = "https://github.com/jsgerman-oss/gridwars.run"
Source = "https://github.com/jsgerman-oss/gridwars.run"

[tool.setuptools]
# Discover Python packages under gridwars/ (the Evennia game dir).
# Vendored Evennia is installed as a dependency, not packaged with us.
packages = { find = { include = ["gridwars*"], exclude = ["vendor*", "tests*", "docs*"] } }
